user auth module

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,12 @@
-- check if a product is available among all websites
+optimize the display algorithm for products in all stores.....with price not equal to zero
+add the user modules sign up and password reset....and login
+add the ability to keep track of product
+add the ability to get the trackings on mail...
+
+tracked products....
+tracked status....
+user tracking the products...
+use ajax to add...
+
+
 
